general structure etc

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>KrappiDesign</title>
+    <title>AjlaC</title>
     <link rel="stylesheet" href="/dist/main.css">
   </head>
   <body>
