--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-    <title>AjlaC</title>
-    <link rel="stylesheet" href="/dist/main.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  <title>AjlaC</title>
+  <link rel="stylesheet" href="/dist/main.css">
+</head>
+
+<body style="background-image: url('https://github.com/AjlaC/portfolio/blob/master/ajlac2.png?raw=true');
+  background-size: 100%;">
+  <div id="app"></div>
+  <script src="/dist/build.js"></script>
+</body>
+
 </html>
