--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <title>AjlaC</title>
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="/dist/main.css">
 </head>
 
-<body style="background-image: url('https://github.com/AjlaC/portfolio/blob/master/ajlac2.png?raw=true');
-  background-size: 100%;">
+<body>
   <div id="app"></div>
-  <script src="/build.js"></script>
+  <script src="/dist/build.js"></script>
 </body>
 
 </html>
