portfolio item structure and smaller details

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-  <title>Ajla Cano UX Engineer</title>
-  <link rel="stylesheet" href="/main.css">
+  <link rel="icon" href="/favicon.png" type="image/x-icon">
+  <title>Ajla Cano | UX Engineer</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="/build.js"></script>
+  <script src="build.js"></script>
 </body>
 
 </html>
